--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.3.6",
+    "axios": "0.27.2",
     "xml2js": "^0.4.23",
     "cors": "^2.8.5"
   },
